--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-  
-    <main>
-      
-    </main>
+    <div class="container">
+      <h1>Lista de Tarefas</h1>
+      <input type="text" id="tarefaInput" placeholder="Digite uma tarefa...">
+      <button id="adicionarBtn">Adicionar</button>
+      <ul id="listaTarefas"></ul>
+  </div>
+    
   </body>
 </html>
